@@ -16,7 +16,7 @@ EXTRA_DIST += $(LUAJIT_TREE)-PATCHES
 include $(srcdir)/../../am/dist_hook.am
 NEVER_NAMES += $(NEVER_NAMES_SUB) $(NEVER_NAMES_LT)
 
-AM_CPPFLAGS = -I$(srcdir)/$(LUAJIT_TREE)/src $(LUAJIT_DEFINES)
+AM_CPPFLAGS = -I$(srcdir)/$(LUAJIT_TREE)/src $(LUAJIT_DEFINES) -U_FORTIFY_SOURCE
 AM_CFLAGS = $(LUAJIT_CFLAGS) -Wall
 AM_CCASFLAGS = $(LUAJIT_CFLAGS)
 
